# Instacap-Rs

./: Cargo.toml  README.md
analysis-engine/: Cargo.toml
analysis-engine/src/: alert_manager.rs  anomaly_detector.rs  main.rs  threat_detector.rs  traffic_analyzer.rs
ml-models/: anomaly_detector.py
packet-analyzer/src/: deep_inspection.rs  performance_metrics.rs
packet-capture/: Cargo.toml
packet-capture/src/: deep_inspection.rs  main.rs  packet_capture.rs  performance_metrics.rs  protocol_parser.rs
src/: main.rs
