[package]
name = "instacap-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
kafka = "0.10.0"
clap = { version = "4.0", features = ["derive"] }
log = "0.4"
env_logger = "0.10"
uuid = "1.17.0"
elasticsearch = "9.0.0-alpha.1"
rayon = "1.10.0"
ndarray = "0.16.1"
linfa = "0.7.1"
anyhow = "1.0.98"
reqwest = "0.12.19"

