[package]
name = "packet-capture"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core packet capture and network libraries
pnet = "0.34"
pcap = "1.0"
tokio = { version = "1.0", features = ["full"] }
tokio-util = "0.7"

# Serialization and data handling
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Protocol parsing
nom = "7.1"
byteorder = "1.5"

# Async and networking
futures = "0.3"
async-trait = "0.1"

# Logging and metrics
log = "0.4"
env_logger = "0.10"
prometheus = "0.13"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Configuration
config = "0.13"
clap = { version = "4.0", features = ["derive"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Hashing and cryptography for deep inspection
sha2 = "0.10"
md5 = "0.7"

# Memory management and optimization
crossbeam = "0.8"
rayon = "1.7"

# Network utilities
ipnetwork = "0.20"
socket2 = "0.5"

# System interfaces
nix = "0.27"
libc = "0.2"

[dev-dependencies]
mockall = "0.11"
criterion = "0.5"

[[bin]]
name = "packet-capture"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1